--- a/law_tonic/pubspec.yaml
+++ b/law_tonic/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.1
-  intl: ^0.18.0
+  intl: 0.20.2
 
 dev_dependencies:
   flutter_test:
