--- a/lawtonic/pubspec.yaml
+++ b/lawtonic/pubspec.yaml
@@ -1,4 +1,4 @@
-name: law_tonic
+name: lawtonic
 description: A new Flutter project.
 
 publish_to: 'none'
@@ -31,3 +31,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
